сделал хуйню, завтра доделать позионирование и функцию отправки мессенджа заявки на курсы

--- a/HimBio/static/index/index.css
+++ b/HimBio/static/index/index.css
@@ -9,3 +9,15 @@
 .my-4 {
     margin-top: 2.7rem !important; /* or any other value */
 }
+.my-5 {
+    margin-top: 2.7rem !important; /* or any other value */
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-right: 20px;
+    margin-left: 20px;
+    
+}
+.my-6{
+    margin-right: 3% !important;
+    margin-left: 3% !important;
+}
