--- a/HimBio/templates/index/about.html
+++ b/HimBio/templates/index/about.html
@@ -11,6 +11,10 @@
     <div class="container">
             <p>Ghbdtn
             </p>
+            <p>
+                <lor></lor>
+            </p>
+            <h1></h1>
     </div>
 </body>
 </html>
